--- a/styles/entrance.css
+++ b/styles/entrance.css
@@ -12,7 +12,6 @@ img {
   border: none;
   max-width: 100%;
   vertical-align: middle;
-  margin: 0 auto!important;
   display: block;
 }
 body,
@@ -57,6 +56,10 @@ textarea {
 table {
   border-collapse: collapse;
 }
+button {
+  border: none;
+  outline: none;
+}
 input,
 select,
 textarea {
@@ -73,8 +76,9 @@ body {
   max-width: 640px;
   min-width: 320px;
   color: #555;
-  background: #fff;
+  background: #fce3cb;
   height: 100%;
+  position: relative;
 }
 a:hover,
 a:visited,
@@ -98,17 +102,17 @@ a:active {
   margin-top: -22px;
   z-index: 10;
   cursor: pointer;
-  font-size: 30px;
+  font-size: 20px;
 }
 .swiper-container {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  top: -5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 .swiper-container .swiper-slide {
   font-size: 18px;
-  background: rgba(167, 17, 17, 0.09);
+  background: rgba(251, 243, 243, 0.72);
   justify-content: center;
   height: 60px;
   overflow: hidden;
@@ -127,22 +131,57 @@ a:active {
 }
 .swiper-container .glyphicon-menu-right {
   position: absolute;
-  right: 43px;
+  right: 30px;
 }
 .swiper-container .white {
-  color: #fff;
+  color: #e85e63;
 }
+/****** Index Middle Start ******/
 .middle {
-  position: relative;
-  height: auto;
-  color: #ffcc11;
-  top: -5px;
+  color: #fed79b;
+  background: #fce4ca url('../image/4.jpg') no-repeat 0 0;
+  background-size: 100%;
 }
-.middle .two {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+.middle .middle-redpack-container {
+  padding-top: 540px;
+}
+.middle .middle-redpack-img {
+  height: 720px;
+  background: url('../image/5.png') no-repeat 0 0;
+  background-size: 100%;
+  display: none;
+}
+.middle .middle-redpack-title {
+  color: #fed79b;
+  font-size: 16px;
+  padding-top: 198px;
+}
+.middle .middle-redpack-title p {
+  line-height: 21px;
+}
+.middle .middle-redpack-subtitle {
+  font-size: 18px;
+  line-height: 21px;
+  margin-top: 53px;
+}
+.middle .bottom-block {
+  font-size: 18px;
+  line-height: 21px;
+  margin-top: 53px;
+}
+.middle .top-block {
+  font-size: 18px;
+  line-height: 21px;
+  margin-top: 120px;
+}
+.middle .top-block-kid {
+  opacity: 0.7;
+  font-size: 16px;
+  line-height: 21px;
+  margin: -126px;
+}
+.middle .bottom-block {
+  margin-top: 70px;
 }
 .middle .four {
   width: 100%;
@@ -150,98 +189,246 @@ a:active {
   z-index: -1;
   overflow: hidden;
 }
-.middle .userImg {
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  background: #fff;
-  z-index: 1;
-  border-radius: 50px;
-  top: 37%;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-}
-.middle .gdwl {
-  position: absolute;
-  top: 48%;
-  left: 0;
-  right: 0;
-  text-align: center;
-  z-index: 1;
-  color: #fff;
-  font-size: 18px;
-}
-.middle .fc {
-  position: absolute;
-  top: 56%;
-  left: 0;
-  right: 0;
-  text-align: center;
-  z-index: 1;
-  color: #fff;
-  font-size: 16px;
-}
-.middle .kai-parent {
-  position: absolute;
-  background: #ffcc11;
+.middle .middle-redpack-button {
+  margin-top: 93px;
+  color: #000;
+  background: #b4b4b4;
   width: 90px;
   height: 90px;
+  line-height: 90px;
   border-radius: 50px;
-  top: 65%;
-  left: 0;
-  right: 0;
   font-size: 20px;
-  z-index: 1;
   text-align: center;
-  margin: 0 auto;
 }
-.middle .kai-parent button {
-  position: relative;
-  width: 80px;
-  height: 80px;
-  border-radius: 50px;
-  outline: none !important;
-  padding: 0;
-  margin: 0;
-  font-size: 24px;
-  top: 5px;
-  background: #ffcc11;
+.middle .middle-redpack-button:active {
+  background: #e49c01;
+}
+.middle .middle-redpack-button2 {
+  margin-top: 45px;
+  background: #b4b4b4;
   color: #000;
-  border: 1px solid #ffffff;
-}
-.middle .kai-parent button:active {
-  background: #e49c01!important;
-}
-.middle .five {
-  position: relative;
-  width: 75%;
-  top: -60px;
-  max-width: 300px;
-  padding-top: 77%;
-}
-.middle .main-title {
-  position: absolute;
+  width: 90px;
+  height: 90px;
+  line-height: 90px;
+  border-radius: 50px;
+  text-align: center;
   font-size: 20px;
-  top: 78.5%;
-  left: 0;
-  right: 0;
+}
+.middle .middle-redpack-button2:active {
+  background: #e49c01;
 }
 .middle .subHeading {
-  position: absolute;
-  top: 84%;
   opacity: 0.7;
-  width: 52%;
-  max-width: 300px;
   font-size: 16px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  line-height: 21px;
+  margin: 30px;
 }
+@media (max-width: 768px) {
+  .middle .middle-redpack-container {
+    padding-top: 550px;
+  }
+  .middle .middle-redpack-img {
+    height: 720px;
+  }
+  .middle .middle-redpack-button {
+    margin-top: 135px;
+  }
+  .middle .middle-redpack-button2 {
+    margin-top: 122px;
+  }
+  .middle .middle-redpack-title {
+    padding-top: 157px;
+  }
+  .middle .top-block {
+    margin-top: 82px;
+  }
+  .middle .top-block-kid {
+    margin: -189px;
+  }
+  .middle .bottom-block {
+    margin-top: 73px;
+  }
+}
+@media (max-width: 640px) {
+  .middle .middle-redpack-container {
+    padding-top: 530px;
+  }
+  .middle .middle-redpack-img {
+    height: 715px;
+  }
+  .middle .middle-redpack-title {
+    padding-top: 151px;
+  }
+  .middle .middle-redpack-subtitle {
+    margin-top: 51px;
+  }
+  .middle .middle-redpack-button {
+    margin-top: 148px;
+  }
+  .middle .middle-redpack-button2 {
+    margin-top: 122px;
+  }
+  .middle .top-block {
+    margin-top: 89px;
+  }
+  .middle .top-block-kid {
+    margin: -189px;
+  }
+  .middle .bottom-block {
+    margin-top: 48px;
+  }
+}
+@media (max-width: 512px) {
+  .middle .middle-redpack-container {
+    padding-top: 380px;
+  }
+  .middle .middle-redpack-img {
+    height: 570px;
+  }
+  .middle .middle-redpack-title {
+    padding-top: 128px;
+  }
+  .middle .middle-redpack-subtitle {
+    margin-top: 51px;
+  }
+  .middle .middle-redpack-button {
+    margin-top: 21px;
+  }
+  .middle .middle-redpack-button2 {
+    margin-top: 101px;
+  }
+  .middle .top-block {
+    margin-top: 37px;
+  }
+  .middle .top-block-kid {
+    margin: -179px;
+  }
+  .middle .bottom-block {
+    margin-top: 48px;
+  }
+}
+@media (max-width: 414px) {
+  .middle .middle-redpack-container {
+    padding-top: 345px;
+  }
+  .middle .middle-redpack-img {
+    height: 460px;
+  }
+  .middle .middle-redpack-title {
+    padding-top: 101px;
+  }
+  .middle .middle-redpack-button {
+    margin-top: 25px;
+  }
+  .middle .middle-redpack-button2 {
+    margin-top: 50px;
+  }
+  .middle .top-block {
+    margin-top: 40px;
+  }
+  .middle .top-block-kid {
+    margin: -133px;
+  }
+  .middle .bottom-block {
+    margin-top: 63px;
+  }
+}
+@media (max-width: 375px) {
+  .middle .middle-redpack-container {
+    padding-top: 310px;
+  }
+  .middle .middle-redpack-img {
+    height: 418px;
+  }
+  .middle .middle-redpack-title {
+    padding-top: 83px;
+  }
+  .middle .middle-redpack-button {
+    margin-top: 25px;
+  }
+  .middle .middle-redpack-subtitle {
+    margin-top: 37px;
+  }
+  .middle .subHeading {
+    margin: 15px;
+  }
+  .middle .top-block {
+    margin-top: 31px;
+  }
+  .middle .bottom-block {
+    margin-top: 56px;
+  }
+}
+@media (max-width: 360px) {
+  .middle .middle-redpack-container {
+    padding-top: 310px;
+  }
+  .middle .middle-redpack-img {
+    height: 418px;
+  }
+  .middle .middle-redpack-title {
+    padding-top: 83px;
+  }
+  .middle .middle-redpack-button {
+    margin-top: 25px;
+  }
+  .middle .middle-redpack-subtitle {
+    margin-top: 25px;
+  }
+  .middle .subHeading {
+    margin: 15px;
+  }
+  .middle .top-block {
+    margin-top: 31px;
+  }
+  .middle .bottom-block {
+    margin-top: 42px;
+  }
+}
+@media (max-width: 320px) {
+  .middle .middle-redpack-container {
+    padding-top: 265px;
+  }
+  .middle .middle-redpack-img {
+    height: 355px;
+  }
+  .middle .middle-redpack-title {
+    padding-top: 63px;
+  }
+  .middle .middle-redpack-button {
+    margin-top: 17px;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+  }
+  .middle .middle-redpack-button2 {
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+  }
+  .middle .middle-redpack-subtitle {
+    margin-top: 32px;
+  }
+  .middle .subHeading {
+    margin: 11px;
+  }
+  .middle .top-block {
+    margin-top: 19px;
+  }
+  .middle .top-block-kid {
+    margin-top: -119px;
+  }
+  .middle .bottom-block {
+    margin-top: 46px;
+  }
+}
+/****** Index Middle End ******/
+/****** Index Bottom End ******/
 .bottom {
   position: relative;
   color: #fff;
-  top: -77px;
+  top: -44px;
+  z-index: 1;
 }
 .bottom img {
   position: absolute;
@@ -276,6 +463,13 @@ a:active {
   margin: 0 auto;
   border: 1px solid #ffffff;
 }
+.bottom .bottom-kid ul .col-xs-4 .big span {
+  display: inline-block;
+  line-height: 21px;
+  width: 49px;
+  margin-top: 18px;
+  margin-right: 3px;
+}
 .bottom .bottom-kid ul .col-xs-4 .big textarea {
   height: 63px;
   width: 65px;
@@ -283,6 +477,7 @@ a:active {
   line-height: 20px;
   resize: none;
   overflow: hidden;
+  margin-top: 21px;
 }
 .bottom .bottom-kid ul .col-xs-4 .small {
   position: relative;
@@ -314,10 +509,15 @@ a:active {
   background: #e49c01!important;
 }
 .qnws {
-  color: #3a3636;
+  color: #fff;
   display: block;
   text-align: center;
+  position: relative;
+  top: 30px;
+  z-index: 1;
 }
+/****** Index Bottom End ******/
+/****** 奖品 Start ******/
 .mask1 {
   position: fixed;
   z-index: 1000;
@@ -355,6 +555,7 @@ a:active {
   width: 82%;
   height: 320px;
   max-width: 344px;
+  margin: 0 auto;
 }
 .mask1 .mask-body .mask-title {
   text-align: center;
@@ -401,6 +602,8 @@ a:active {
   left: 0;
   right: 0;
 }
+/****** 奖品 End ******/
+/****** 二维码 Start ******/
 .mask2 {
   position: fixed;
   max-width: 640px;
@@ -434,6 +637,7 @@ a:active {
 .mask2 .mask-body img {
   width: 45%;
   padding-top: 20px;
+  margin: 0 auto;
 }
 .mask2 .mask-body .js-close2 {
   position: absolute;
@@ -446,6 +650,8 @@ a:active {
   font-size: 16px;
   padding: 20px;
 }
+/****** 二维码 End ******/
+/****** 弹框提示 Start ******/
 .mask3 {
   position: fixed;
   max-width: 640px;
@@ -480,6 +686,8 @@ a:active {
   padding: 5px;
   color: #0BB20C;
 }
+/****** 弹框提示 End ******/
+/****** 记载中 Start ******/
 .mask4 {
   position: fixed;
   z-index: 1000;
@@ -510,121 +718,4 @@ a:active {
 .mask4 .mask-body p {
   font-size: 16px;
 }
-@media (max-width: 320px) {
-  .middle .kai-parent {
-    position: absolute !important;
-    top: 59%!important;
-    width: 80px;
-    height: 80px;
-  }
-  .middle .kai-parent button {
-    width: 70px;
-    height: 70px;
-  }
-  .middle .main-title {
-    position: absolute;
-    font-size: 17px;
-    top: 75%;
-  }
-  .middle .subHeading {
-    position: absolute;
-    top: 80.5%;
-    width: 57%;
-    font-size: 15px;
-  }
-  .middle .gdwl {
-    position: absolute;
-    top: 46%;
-  }
-  .middle .fc {
-    position: absolute;
-    top: 53%;
-  }
-  .middle .userImg {
-    position: absolute;
-    width: 65px;
-    height: 65px;
-    top: 34%;
-  }
-}
-@media (min-width: 321px) and (max-width: 360px) {
-  .middle .kai-parent {
-    position: absolute !important;
-    top: 63%!important;
-  }
-  .middle .main-title {
-    position: absolute;
-    top: 78%;
-  }
-  .middle .subHeading {
-    position: absolute;
-    top: 83%;
-    width: 55%;
-    font-size: 14px;
-  }
-  .middle .gdwl {
-    position: absolute;
-    top: 48%;
-  }
-  .middle .fc {
-    position: absolute;
-    top: 56%;
-  }
-  .middle .userImg {
-    position: absolute;
-    top: 35%;
-  }
-}
-@media (min-width: 375px) and (max-width: 411px) {
-  .middle .kai-parent {
-    position: absolute !important;
-    top: 62%!important;
-  }
-  .middle .main-title {
-    position: absolute;
-    top: 77%;
-  }
-  .middle .subHeading {
-    position: absolute;
-    top: 83%;
-    width: 55%;
-  }
-  .middle .gdwl {
-    position: absolute;
-    top: 48%;
-  }
-  .middle .fc {
-    position: absolute;
-    top: 56%;
-  }
-  .middle .userImg {
-    position: absolute;
-    top: 35%;
-  }
-}
-@media (min-width: 640px) {
-  .middle .kai-parent {
-    position: absolute !important;
-    top: 71%!important;
-  }
-  .middle .main-title {
-    position: absolute;
-    top: 82%;
-  }
-  .middle .subHeading {
-    position: absolute;
-    top: 87%;
-  }
-  .middle .gdwl {
-    position: absolute;
-    top: 60%;
-  }
-  .middle .fc {
-    position: absolute;
-    top: 65%;
-  }
-  .middle .userImg {
-    position: absolute;
-    top: 49%;
-  }
-}
+/****** 记载中 End ******/
