--- a/styles/entrance.css
+++ b/styles/entrance.css
@@ -151,6 +151,9 @@ a:active {
   background-size: 100%;
   display: none;
 }
+.middle #start {
+  display: block;
+}
 .middle .middle-redpack-title {
   color: #fed79b;
   font-size: 16px;
