--- a/styles/entrance.less
+++ b/styles/entrance.less
@@ -41,6 +41,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 
 	.middle-redpack-container   {   padding-top: 540px; }
 	.middle-redpack-img         {   height: 720px; background: url('../image/5.png') no-repeat 0 0; background-size: 100%;display: none }
+	#start                      {   display: block;          }
 	.middle-redpack-title       {   color: #fed79b; font-size: 16px; padding-top: 198px;
 		p                           {   line-height: 21px; }
 	}
