--- a/styles/Weather-Forecast.css
+++ b/styles/Weather-Forecast.css
@@ -112,10 +112,25 @@ body {
 .container-fluid .three {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: auto;
   z-index: -1;
 }
 .container-fluid .nine {
   width: 90%;
-  padding-top: 37%;
+  padding-top: 40%;
+}
+.container-fluid button {
+  margin: 0 auto;
+  width: 80% !important;
+  max-width: 300px;
+  padding: 10px;
+  background: #fbb318;
+  border-radius: 9px;
+  outline: none!important;
+  position: relative;
+  top: 20px;
+  border: none;
+}
+.container-fluid button:active {
+  background: #e49c01!important;
 }
