--- a/styles/Weather-Forecast.less
+++ b/styles/Weather-Forecast.less
@@ -47,11 +47,26 @@ body{ margin:0 auto;max-width:640px; min-width:320px;color:#555; padding-bottom:
 	.three{
 	position: @pos-a;
 	width:@100;
-	height:@100; 
+	height:auto;
 	z-index: -1
 	}
 	.nine{
 	width:@100 - 10;
-    padding-top:@100 - 63;
+    padding-top:@100 - 60;
+	}
+	button{
+		margin: 0 auto;
+		width: 80% !important;
+		max-width: 300px;
+		padding: 10px;
+		background: #fbb318;
+		border-radius: 9px;
+		outline: none!important;
+		position: relative;
+		top: 20px;
+		border:none;
+		&:active{
+			background:#e49c01!important;
+		}
 	}
 }
