--- a/styles/otherRecord.less
+++ b/styles/otherRecord.less
@@ -78,3 +78,11 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
         }
 	}
 }
+
+@media (min-width: 375px) {
+	.container-fluid{
+		.three{
+			min-height: 700px;
+		}
+	}
+}
