--- a/styles/entrance.less
+++ b/styles/entrance.less
@@ -26,7 +26,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 .swiper-container { position: absolute; top: 0; left: 0; right: 0;
 
 	.swiper-slide{ font-size: 18px;background: rgba(251, 243, 243, 0.72); justify-content: center; height:60px;  overflow:hidden;text-align: center;
-		img         { width: 100%;height: auto; }
+		img         { width: 100%;height: 60px;}
 		p{           font-size: 12px;
 			span        {  color: #e53b40; font-size:16px }
 		}
@@ -48,7 +48,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	.middle-redpack-subtitle    {   font-size: 18px; line-height: 21px; margin-top: 53px;    }
 	.bottom-block               {   font-size: 18px; line-height: 21px; margin-top: 53px;    }
 	.top-block                  {   font-size: 18px; line-height: 21px; margin-top: 120px;    }
-	.top-block-kid              {   opacity: 0.7; font-size: 16px;line-height: 21px; margin: -126px;     }
+	.top-block-kid              {   opacity: 0.7; font-size: 16px;line-height: 21px; margin-top: -126px;  }
 	.bottom-block               {   margin-top:70px;  }
 	.four                       {   width:@100;  position:@pos-a;  z-index: -1;  overflow: hidden;  }
 
@@ -81,7 +81,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		.middle-redpack-button2     {   margin-top: 122px; }
 		.middle-redpack-title       {   padding-top: 157px;}
 		.top-block                  {   margin-top: 82px;  }
-		.top-block-kid              {   margin: -189px;   }
+		.top-block-kid              {   margin-top: -189px;   }
 		.bottom-block               {   margin-top: 73px;}
 	}
 }
@@ -95,7 +95,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		.middle-redpack-button      {   margin-top:148px; }
 		.middle-redpack-button2     {   margin-top: 122px; }
 		.top-block                  {   margin-top: 89px;  }
-		.top-block-kid              {   margin: -189px;   }
+		.top-block-kid              {   margin-top: -189px;   }
 		.bottom-block               {   margin-top: 48px;}
 	}
 }
@@ -109,7 +109,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		.middle-redpack-button      {   margin-top:21px; }
 		.middle-redpack-button2     {   margin-top: 101px; }
 		.top-block                  {   margin-top: 37px;  }
-		.top-block-kid              {   margin: -179px;   }
+		.top-block-kid              {   margin-top: -179px;   }
 		.bottom-block               {   margin-top: 48px;}
 	}
 }
@@ -122,7 +122,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		.middle-redpack-button      {   margin-top:25px; }
 		.middle-redpack-button2     {   margin-top: 50px; }
 		.top-block                  {   margin-top: 40px;}
-		.top-block-kid              {   margin: -133px;   }
+		.top-block-kid              {   margin-top: -133px;   }
 		.bottom-block               {   margin-top: 63px;}
 
 	}
