--- a/styles/entrance.less
+++ b/styles/entrance.less
@@ -37,7 +37,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 
 /****** Index Middle Start ******/
 
-.middle {   color:#fed79b; background: #fce4ca url('../image/4.jpg') no-repeat 0 0; background-size: 100%;
+.middle {   color:#fed79b; background: #fce4ca url('../image/4.jpg') no-repeat 0 0; background-size: 100%;background-position-y: -30px;
 
 	.middle-redpack-container   {   padding-top: 540px; }
 	.middle-redpack-img         {   height: 720px; background: url('../image/5.png') no-repeat 0 0; background-size: 100%;display: none }
@@ -48,7 +48,9 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 	.middle-redpack-subtitle    {   font-size: 18px; line-height: 21px; margin-top: 53px;    }
 	.bottom-block               {   font-size: 18px; line-height: 21px; margin-top: 53px;    }
 	.top-block                  {   font-size: 18px; line-height: 21px; margin-top: 120px;    }
+	.top-block2                 {   font-size: 17px; line-height: 21px; margin-top: 87px;    }
 	.top-block-kid              {   opacity: 0.7; font-size: 16px;line-height: 21px; margin-top: -126px;  }
+	.top-block2-kid             {   opacity: 0.7; font-size: 13px;}
 	.bottom-block               {   margin-top:70px;  }
 	.four                       {   width:@100;  position:@pos-a;  z-index: -1;  overflow: hidden;  }
 
@@ -68,20 +70,23 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		}
 	}
 
-	.subHeading                 {   opacity: 0.7;font-size: 16px;line-height: 21px;margin: 30px }
+	.subHeading                 {   opacity: 0.7;font-size: 13px;line-height: 21px;    margin-top: 10px; }
 }
 
 
 @media ( max-width: 768px )
 {
 	.middle {
+							background-position-y: -30px;
 		.middle-redpack-container   {   padding-top: 550px; }
 		.middle-redpack-img         {   height: 720px; }
-		.middle-redpack-button      {   margin-top: 135px; }
+		.middle-redpack-button      {   margin-top: 87px; }
 		.middle-redpack-button2     {   margin-top: 122px; }
 		.middle-redpack-title       {   padding-top: 157px;}
 		.top-block                  {   margin-top: 82px;  }
+		.top-block2 				{	margin-top: 45px;	}
 		.top-block-kid              {   margin-top: -189px;   }
+		.top-block2-kid             {   margin-top: 10px;  }
 		.bottom-block               {   margin-top: 73px;}
 	}
 }
@@ -108,6 +113,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		.middle-redpack-subtitle    {   margin-top:51px;  }
 		.middle-redpack-button      {   margin-top:21px; }
 		.middle-redpack-button2     {   margin-top: 101px; }
+		.snatch-button				{	margin-top: 49px!important;	}
 		.top-block                  {   margin-top: 37px;  }
 		.top-block-kid              {   margin-top: -179px;   }
 		.bottom-block               {   margin-top: 48px;}
@@ -116,14 +122,18 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 @media ( max-width: 414px )
 {
 	.middle {
-		.middle-redpack-container   {   padding-top: 345px; }
+								background-position-y: 0px;
+		.middle-redpack-container   {   padding-top: 380px; }
 		.middle-redpack-img         {   height: 460px; }
 		.middle-redpack-title       {   padding-top: 101px;}
 		.middle-redpack-button      {   margin-top:25px; }
 		.middle-redpack-button2     {   margin-top: 50px; }
+		.snatch-button				{	margin-top: 24px!important;	}
 		.top-block                  {   margin-top: 40px;}
 		.top-block-kid              {   margin-top: -133px;   }
-		.bottom-block               {   margin-top: 63px;}
+		.top-block2                 {   margin-top: 20px;}
+		.top-block2-kid             {   margin-top: 13px;  }
+		.bottom-block               {   margin-top: 18px;}
 
 	}
 
@@ -131,44 +141,52 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 @media ( max-width: 375px )
 {
 	.middle {
-		.middle-redpack-container   {    padding-top: 310px; }
+								background-position-y: 10px;
+		.middle-redpack-container   {    padding-top: 360px; }
 		.middle-redpack-img         {   height: 418px; }
 		.middle-redpack-title       {   padding-top: 83px;}
-		.middle-redpack-button      {   margin-top:25px; }
+		.middle-redpack-button      {   margin-top:12px; }
 		.middle-redpack-subtitle    {   margin-top:37px;  }
-		.subHeading                 {   margin: 15px;      }
+		.subHeading                 {   margin-top:15px;      }
 		.top-block                  {   margin-top:31px;           }
-		.bottom-block               {   margin-top: 56px;}
+		.bottom-block               {   margin-top: 20px;}
 	}
 
 }
 @media ( max-width: 360px )
 {
 	.middle {
-		.middle-redpack-container   {   padding-top: 310px; }
+   								 background-position-y: 10px;
+		.middle-redpack-container   {   padding-top: 340px; }
 		.middle-redpack-img         {   height: 418px; }
 		.middle-redpack-title       {   padding-top: 83px;}
-		.middle-redpack-button      {   margin-top:25px; }
+		.middle-redpack-button      {       margin-top: 15px;}
+		.snatch-button				{	margin-top: 11px!important;	}
 		.middle-redpack-subtitle    {   margin-top:25px;  }
-		.subHeading                 {   margin: 15px;      }
+		.subHeading                 {       font-size: 15px; margin-top: 10px;      }
 		.top-block                  {   margin-top:31px;           }
-		.bottom-block               {   margin-top: 42px;}
+		.bottom-block               {   margin-top: 12px;}
+
 	}
 
 }
 @media ( max-width: 320px )
 {
 	.middle {
-		.middle-redpack-container   {   padding-top: 265px; }
+		 .middle-redpack-title p 	{ 	font-size: 15px;	}
+		.middle-redpack-container   {   padding-top: 310px; }
 		.middle-redpack-img         {   height: 355px; }
 		.middle-redpack-title       {   padding-top:63px;}
-		.middle-redpack-button      {   margin-top:17px;  width: 80px; height: 80px; line-height: 80px;}
+		.middle-redpack-button      {   margin-top:8px;  width: 80px; height: 80px; line-height: 80px;}
 		.middle-redpack-button2     {   width: 80px; height: 80px; line-height: 80px;}
+		.snatch-button				{	margin-top: 11px!important;	}
 		.middle-redpack-subtitle    {   margin-top:32px;  }
-		.subHeading                 {   margin: 11px;      }
+		.subHeading                 {   margin-top: 11px;font-size: 13px;   }
 		.top-block                  {   margin-top: 19px;  }
+		.top-block2                 {   margin-top: 10px;  }
+		.top-block2-kid             {   margin-top: 10px;  }
 		.top-block-kid              {   margin-top: -119px;           }
-		.bottom-block               {   margin-top: 46px;}
+		.bottom-block               {  margin-top: 10px; font-size: 15px;	}
 	}
 }
 /****** Index Middle End ******/
@@ -190,6 +208,14 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 				}
 
 			}
+		}
+		.ganen		{	
+			.ganen-div			{	background:#fff;display: inline-block;padding:3px; border-radius: 5px;	
+				span 					{	font-size: 16px;color: #f5263e;		}
+				p 						{	color: #f5263e;	}
+			}			
+				
+			
 		}
 		.desc p   {  line-height: 25px  }
 		.yellow     {  color: #fff!important;  margin: 20px auto;  width: 80% !important;  max-width: 300px;  padding: 10px;  background: #fbb318;  border-radius: 9px;  outline: none!important;
@@ -217,7 +243,7 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 			span                {  font-size: 40px;  }
 		}
 		.mask-footer        {  text-align: center;  position: @pos-r;  top: 34px;  font-size: 16px;  color: #d94942;  }
-		button              {  color: #fff!important;  width: 80% !important;  padding: 10px;  background: #fbb318;  border-radius: 9px;  outline: none!important;  max-width: 300px;  position: @pos-a;  top: 340px;  margin: auto;  left: 0;  right: 0;
+		button              {  color:#2b2727;  width: 80% !important;  padding: 10px;  background: #fbb318;  border-radius: 9px;  outline: none!important;  max-width: 300px;  position: @pos-a;  top: 340px;  margin: auto;  left: 0;  right: 0;
 		}
 	}
 }
@@ -231,7 +257,8 @@ a:hover, a:visited, a:link, a:active {text-decoration: none!important;}
 		.title                       {  display: inline-block;  margin-top: 25px;  font-size: 16px;  }
 			img                          {  width: 45%;  padding-top: 20px;  margin: 0 auto;  }
 		.js-close2                   {  position: @pos-a;  right: 3px;  font-size: 20px;  top: 3px;  }
-			p                            {  color: #fff;  font-size: 16px;  padding: 20px;  }
+			.p1                            {  color: #fff;  font-size: 16px;margin: 10px;   }
+			.p2							   {  color: #fff;  font-size: 14px;margin-bottom: 30px;}
 	}
 }
 /****** 二维码 End ******/
