--- a/styles/myRecord.css
+++ b/styles/myRecord.css
@@ -102,15 +102,13 @@ header p {
 .container-fluid {
   padding: 0;
   position: relative;
-  background: url(../image/10.jpg);
   width: 100%;
   height: auto;
   background-size: cover;
-  min-height: 320px;
 }
 .container-fluid .static {
   text-align: center;
-  color: #dd334a;
+  color: #fde760;
   font-size: 16px;
   position: relative;
   top: 10px;
@@ -195,15 +193,21 @@ header p {
 .footer .hbRecord .benlun {
   font-size: 13px;
 }
-@media (max-width: 360px) {
-  .user {
-    width: 90px!important;
-    height: 90px!important;
-  }
-}
 @media (min-width: 425px) {
   .user {
     position: relative;
     top: 33px;
+  }
+}
+@media (max-width: 414px) {
+  .user {
+    position: relative;
+    top: 19px;
+  }
+}
+@media (max-width: 360px) {
+  .user {
+    width: 90px!important;
+    height: 90px!important;
   }
 }
