主会场修改2.0

--- a/styles/index.css
+++ b/styles/index.css
@@ -90,8 +90,7 @@ html {
   width: 90%;
 }
 .middle ul li .logo .youc {
-  margin: .2rem auto;
-  width: 70%;
+  margin: -0.05rem auto;
 }
 .middle ul li .logo .xhjy {
   margin: -0.05rem auto;
