--- a/styles/index.less
+++ b/styles/index.less
@@ -23,7 +23,7 @@ html{font-size: 62.5%}
 				.logo           {   background: #fff;  border-radius: 0.2rem;  margin: .1rem;overflow: hidden;
 					.qn               {   margin: .1rem auto;width: 80%;   }
 					.youz             {   margin: 0 auto;width: 90%;   }
-					.youc             {   margin: .2rem auto;width: 70%;   }
+					.youc             {   margin: -.05rem auto;  }
 					.xhjy             {   margin:-.05rem auto   }
 				}
 				.hd-time        {   line-height: 1.5rem   }
