--- a/styles/index.less
+++ b/styles/index.less
@@ -2,103 +2,138 @@ html{font-size: 62.5%}
 .pos-a{   position: absolute;z-index: -1;   }
 
 
-	.top        {
-		.img-2          {   z-index: -1;margin-top: -0.2rem;   }
-		.activity-time  {   margin-top: -1.8rem    }
-		.lb-container   {   height: 0.7rem;background: #fdf4f7;overflow: inherit;
-			.am-slides  {
-				>li          {   line-height: 0.7rem;
-					span		    {   color: #d53247;font-size:0.5rem   } } } }
-		.am-slider-b2 .am-direction-nav a   {   color: #d53247;background:none;   } }
+.top        {
+	.img-2          {   z-index: -1;margin-top: -0.2rem;   }
+	.activity-time  {   margin-top: -1.8rem    }
+	.lb-container   {   height: 0.7rem;background: #fdf4f7;overflow: inherit;
+		.am-slides  {
+			>li          {   line-height: 0.7rem;
+				span		    {   color: #d53247;font-size:0.5rem   } } } }
+	.am-slider-b2 .am-direction-nav a   {   color: #d53247;background:none;   } }
 
 
-	.middle     {  text-align: center;
-		.md-img1        {   height: 71%;   }
-		.ghxc           {   width: 88%;margin: .4rem auto 0;   }
-		.md-bg          {   width: 88%;height:45%;left: 0;right: 0;margin: 0 auto;   }
-		.rule-link      {   display: inline-block;  width: 78%;  height: .9rem;  line-height: .9rem;  background: #d63547;  border-radius: 0.2rem;  margin: .4rem auto 0;  color: #fadfc4;  font-size: .3rem;box-shadow: 0.5px 0.5px 0.5px #797979;   }
-		ul              {   margin:0;padding: 0;
-			li              {  display: flex;width: 78%;  height: 1.5rem;  background: #d63547;  border-radius: .2rem;  font-size: .2rem; margin: .3rem auto;box-shadow: 0.5px 0.5px 0.5px #797979;
-				div             {   flex: 1;color: #fef0d0;    }
-				.logo           {   background: #fff;  border-radius: 0.2rem;  margin: .1rem;overflow: hidden;
-					.qn               {   margin: .1rem auto;width: 80%;   }
-					.youz             {   margin: 0 auto;width: 90%;   }
-					.youc             {   margin: -.05rem auto;  }
-					.xhjy             {   margin:-.05rem auto   }
-				}
-				.hd-time        {   line-height: 1.5rem   }
-				.hd-money       {   margin-top: .3rem   }
-				.gs-name        {   line-height: 1.5rem}
+.middle     {  text-align: center;
+	.md-img1        {   height: 71%;   }
+	.ghxc           {   width: 88%;margin: .4rem auto 0;   }
+	.md-bg          {   width: 88%;height:45%;left: 0;right: 0;margin: 0 auto;   }
+	.rule-link      {   display: inline-block;  width: 78%;  height: .9rem;  line-height: .9rem;  background: #d63547;  border-radius: 0.2rem;  margin: .4rem auto 0;  color: #fadfc4;  font-size: .3rem;box-shadow: 0.5px 0.5px 0.5px #797979;   }
+	ul              {   margin:0;padding: 0;
+		li              {  display: flex;width: 78%;  height: 1.5rem;  background: #d63547;  border-radius: .2rem;  font-size: .2rem; margin: .3rem auto;box-shadow: 0.5px 0.5px 0.5px #797979;
+			div             {   flex: 1;color: #fef0d0;    }
+			.logo           {   background: #fff;  border-radius: 0.2rem;  margin: .1rem;overflow: hidden;
+				.qn               {   margin: .15rem auto;width: 80%;   }
+				.youz             {   margin: .1rem  auto;width: 90%;   }
+				.youc             {   margin: .05rem auto;width: 100%;   }
+				.xhjy             {   margin:.1rem auto   }
 			}
+			.hd-time        {   line-height: 1.5rem   }
+			.hd-money       {   margin-top: .45rem   }
+			.gs-name        {   line-height: 1.5rem}
 		}
 	}
+}
 
 
-	.bottom     {text-align: center;position: relative;top:1rem;
-		p           {  padding: 0;margin: .2rem auto;color: #f7e9e9;font-size: .2rem;letter-spacing: 2px  }
-	}
+.bottom     {text-align: center;position: relative;top:1rem;
+	p           {  padding: 0;margin: .2rem auto;color: #f7e9e9;font-size: .2rem;letter-spacing: 2px  }
+}
 
-	@media (min-width: 768px) {
-		.middle { ul { li {
-			.hd-money{   margin-top: 0.4rem;     }
-			.logo {
-						.qn {  margin: .16rem auto;  width: 80%;  }
-						.youz {  margin: .1rem auto;  width: 90%;  }
-						.youc {  margin: .27rem auto;  width: 70%;  }
-						.xhjy {  margin: .1rem auto  } } } } }
+.mask       {   position: fixed;top: 0;z-index: 1000;  top: 0;  right: 0;  left: 0;  bottom: 0;background: rgba(17, 17, 17, 0.7);
+	display: none;
+	img         {   max-width: 90%;  margin: 34% auto;position: absolute;  left: 0;  right: 0;  z-index: -1;   }
+	.mask-desc  {       position: absolute;  margin: 40% auto;  width: 53%;  left: 0;  right: 0;  font-size: .3rem;
+		color: #d41f1a;   }
+	p           {   margin: 0;margin-top: .1rem  }
 
 }
 
-	@media (max-width: 640px) {
-		.top {
-			.activity-time {   margin-top: -1.8rem   } }
+@media (max-width: 768px) {
+	.middle { ul { li {
+		.hd-money{   margin-top: 0.3rem;     }
+		.logo {
+			.qn {  margin: .16rem auto;  width: 80%;  }
+			.youz {  margin: .1rem auto;  width: 90%;  }
+			.youc {  margin: .1rem auto;  width: 100%;  }
+			.xhjy {  margin: .1rem auto  } } } } }
 
-		.middle {
-			.md-bg          {   height: 41%;   }
-			.md-img1        {   height: 67%;   }}
+	.mask       {
+		.mask-desc  {   margin: 29% auto;    width: 73%;font-size: .3rem}
+		img         {   margin: 22% auto  } }
+
+}
+
+@media (max-width: 640px) {
+	.top {
+		.activity-time {   margin-top: -1.8rem   } }
+
+	.middle {
+		.md-bg          {   height: 41%;   }
+		.md-img1        {   height: 67%;   } }
+
+	.middle {ul{li{
+		.logo {
+			.qn {  margin: .1rem auto;  width: 80%;  }
+			.youz {  margin: 0 auto;  width: 90%;  }
+			.youc {  margin: -.05rem auto;  width: 100%;  }
+			.xhjy {  margin: .03rem auto  } }
+	}}}
+	.mask       {
+		.mask-desc  {   margin: 55% auto;    width:80%;}
+		img         {   margin: 45% auto  } }
+}
+
+@media (max-width: 512px) {
+	.top {
+		.activity-time {   margin-top: -1.8rem   } }
+
+	.middle {ul{li{
+		.logo {
+			.xhjy {  margin: -.03rem auto  } }
+	}}}
+
+}
+
+@media (max-width: 414px) {
+	.top {
+		.activity-time {   margin-top: -1.8rem   } }
+
+	.middle ul li {        font-size: .3rem;   }
+}
+
+@media (max-width: 412px) {
+	.top {
+		.activity-time {   margin-top: -1.8rem   } }
+
+	.mask       {
+		.mask-desc  {   margin: 42% auto;}
+		img         {   margin: 32% auto  } }
+}
+
+@media (max-width: 375px) {
+	.top {
+		.activity-time {  margin-top: -1.7rem;   } }
+
+	.middle {
+		.md-bg {   height: 40%;   } }
+
+	.mask       {
+		.mask-desc  {   margin: 50% auto;}
+		img         {   margin: 40% auto  } }
+}
+
+@media (max-width: 360px) {
+	.top {
+		.activity-time {  margin-top: -1.7rem;    } }
+
+	.middle {
+		.md-bg {   height: 40%;   } }
+}
+
+@media (max-width: 320px) {
+	.top {
+		.activity-time {  margin-top: -1.7rem    } }
+
+	.middle {
+		.md-bg {   height: 40%;   }
 	}
-
-	@media (max-width: 512px) {
-		.top {
-			.activity-time {   margin-top: -1.8rem   } }
-
-	}
-
-	@media (max-width: 414px) {
-		.top {
-			.activity-time {   margin-top: -1.8rem   } }
-
-		.middle ul li {        font-size: .3rem;   }
-	}
-
-	@media (max-width: 412px) {
-		.top {
-			.activity-time {   margin-top: -1.8rem   } }
-
-
-	}
-
-	@media (max-width: 375px) {
-		.top {
-			.activity-time {  margin-top: -1.7rem;   } }
-
-		.middle {
-			.md-bg {   height: 40%;   } }
-	}
-
-	@media (max-width: 360px) {
-		.top {
-			.activity-time {  margin-top: -1.7rem;    } }
-
-		.middle {
-			.md-bg {   height: 40%;   } }
-	}
-
-	@media (max-width: 320px) {
-		.top {
-			.activity-time {  margin-top: -1.7rem    } }
-
-		.middle {
-			.md-bg {   height: 40%;   }
-		}
-	}
+}
