--- a/styles/index.less
+++ b/styles/index.less
@@ -40,7 +40,7 @@ html{font-size: 62.5%}
 
 .mask       {   position: fixed;top: 0;z-index: 1000;  top: 0;  right: 0;  left: 0;  bottom: 0;background: rgba(17, 17, 17, 0.7);
 	display: none;
-	img         {   max-width: 90%;  margin: 34% auto;position: absolute;  left: 0;  right: 0;  z-index: -1;   }
+	img         {   width: 63%;max-width: 90%;  margin: 34% auto;position: absolute;  left: 0;  right: 0;  z-index: -1;   }
 	.mask-desc  {       position: absolute;  margin: 40% auto;  width: 53%;  left: 0;  right: 0;  font-size: .3rem;
 		color: #d41f1a;   }
 	p           {   margin: 0;margin-top: .1rem  }
@@ -58,7 +58,7 @@ html{font-size: 62.5%}
 
 	.mask       {
 		.mask-desc  {   margin: 29% auto;    width: 73%;font-size: .3rem}
-		img         {   margin: 22% auto  } }
+		img         {   margin: 22% auto ;    width: 80%; } }
 
 }
 
@@ -79,7 +79,7 @@ html{font-size: 62.5%}
 	}}}
 	.mask       {
 		.mask-desc  {   margin: 55% auto;    width:80%;}
-		img         {   margin: 45% auto  } }
+		img         {   margin: 45% auto; width: 90%; } }
 }
 
 @media (max-width: 512px) {
